crates/ruau/tests/compile/userdata_internals_hidden.rs
fn main() {
    let _ = std::mem::size_of::<ruau::userdata::RawUserDataRegistry>();
    let _ = std::mem::size_of::<ruau::userdata::UserDataStorage<()>>();
}
